# ascend

./: .env.example  ARCHITECTURE.md  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: integration-tests.yml
ascend/: __init__.py  config.py  decorator.py  git_utils.py  node_types.py  serialization.py
ascend/cli/: __init__.py  admin.py  jobs.py  main.py  user.py
ascend/cloud/: __init__.py  base.py  node_pool_validator.py  registry.py
ascend/cloud/azure/: __init__.py  auth.py  backend.py  cli.py  compute.py  image_builder.py  infrastructure.py  node_pool_validator.py  registry.py  storage.py
ascend/dependencies/: __init__.py  analyzer.py
ascend/runtime/: __init__.py  executor.py  streaming.py
ascend/storage/: __init__.py  metadata.py  paths.py
ascend/utils/: __init__.py  errors.py  job_ids.py  naming.py  structured_logging.py
docker/: Dockerfile.runtime  runner.py
docs/: ADMIN_SETUP.md  AUDIT_AND_ROADMAP.md  AUTOMATIC_IMAGE_BUILDING.md  EXAMPLES.md  GPU_SUPPORT.md  IMAGE_CACHE_BUSTING.md  INTEGRATION_TESTING.md  LOGGING_AND_ARTIFACTS.md  MULTI_CLOUD.md  README.md
examples/: __init__.py  lightning_mnist.py  optuna_xgboost.py  optuna_xgboost_compact.py
tests/: conftest.py  credential_loader.py  test_basic.py  test_cli_jobs.py  test_config.py  test_config_validation.py  test_dependency_set.py  test_executor_cancellation.py  test_git_validation.py  test_image_builder.py  test_infrastructure.py  test_job_ids.py  test_kaniko.py  test_lightning_mnist.py  test_logging_and_exceptions.py  test_logging_integration.py  test_namespace_provisioning.py  test_node_pool_wiring.py  test_node_types.py  test_optuna_serialization.py  test_serialization_integrity.py  test_storage_cleanup.py  test_structured_logging.py  test_username_namespace_validation.py  test_wait_for_completion.py
tests/integration/: __init__.py  conftest.py  test_e2e.py  test_job_lifecycle.py  test_kaniko_build.py  test_lightning_mnist.py  test_optuna_example.py  test_storage_integration.py
(+10 files in other folders)
